ChangeLog

Name: William Lai
Date: 10-15-2013
Description: Readme update
    * README.txt: Added instructions on how to download and run program from Eclipse.

Name: William Lai
Date: 10-15-2013
Description: Static Evaluation 1-ply AI
    * src/ComputerPlayer.java: New file. Computer player uses static board evaluation (1-ply) to make its moves.
    * src/Game.java: Added abstract function getHumanMove
    * src/HumanPlayer.java: Added new constructor, prompts move by using call to its Game object
    * src/Player.java: Player now has a Game object associated with it
    * src/StandardChessGame.java: Added new helper functions and moved some more lines from moveSelected to processMove for flexibility.

Name: William Lai
Date: 10-14-2013
Description: Stalemate, legal move lists, animation tweaking
    * src/Game.java: Changed some function signatures for flexibility
    * src/King.java: Changed some legal move conditions
    * src/StandardChessGame.java: Implemented stalemate, added allMoves function for future utility
    * src/StandardChessGameAnimation.java: Tweaked animation parameters to make the UI a bit smoother.

Name: Vincent Wong
Date: 10-10-2013
Description: Added board markers, added player names
    * src/StandardChessGame.java: Implemented a bit of Player integration
    * src/StandardChessGameGraphics.java: Added board marker painting, player name painting
    * src/HumanPlayer.java: New file. Doesn't really do anything though except allows instantiation

Name: Vincent Wong
Date: 10-03-2013
Description: Added standard chess piece images, added animation
    * src/StandardChessGame.java: Tweaked selection mechanics (left click to select and move,
    right click to deselect).
    * src/StandardChessGameGraphics.java: Added utility painting functions for animation.
    * src/StandardChessGameAnimation.java: New class. Runs a thread to animate chess moves.

Name: William Lai
Date: 10-03-2013
Description: Implemented pawn promotion