@@ -8,7 +8,8 @@ public class Definitions
 	public static final int NUMPIECES = 12;
 	public static final String PIECENAMES[] = {"BK","BQ","BN","BB","BR","BP","WK","WQ","WN","WB","WR","WP"};
 	public static final String RMARKERS[] = {"8","7","6","5","4","3","2","1"};
-	public static final String CMARKERS[] = {"h","g","f","e","d","c","b","a"};
+	public static final String CMARKERS[] = {"a","b","c","d","e","f","g","h"};
+	public static final int PLY_DEPTH = 2;
 	
 	public static Color flip(Color c)
 	{
